[tool.poetry]
name = "tgscraper"
version = "0.1.3"
description = "Demo version of a package for easy telegram scraping"
authors = ["Timofei Ryko <timofei.ryko@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/timofeiryko/tgscraper"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^1.10.4"
telethon = "^1.26.1"
pandas = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
